--- a/public/readme
+++ b/public/readme
@@ -3,3 +3,6 @@ https://github.com/akveo/blur-admin
 //next do multi-module
 //multi module,包含 include 重用的部分 header，left
 //content 部分作为
+//css scss的js module整合
+//vendor and app and webpack
+//also
