it is the begin

--- a/public/readme
+++ b/public/readme
@@ -6,3 +6,5 @@ https://github.com/akveo/blur-admin
 //css scssµÄjs moduleÕûºÏ
 //vendor and app and webpack
 //also
+//for file url and fonts
+//also need file copy and env change
