--- a/workspace/readme
+++ b/workspace/readme
@@ -6,9 +6,5 @@ https://github.com/akveo/blur-admin
 //css scssµÄjs moduleÕûºÏ
 //vendor and app and webpack
 //also
-//for file url and fonts
-//also need file copy and env change
-//next copy to workspace and divide, finally delete the public folder and no need npm dependency
-//button install as common basic css
+//keep on doing another html.finally state data
 
-//another way of intl
