it is the begin

--- a/workspace/readme
+++ b/workspace/readme
@@ -9,3 +9,5 @@ https://github.com/akveo/blur-admin
 //keep on doing another html.finally state data
 
 //各种插件尽可能的使用react的
+
+//开始到了content部分，参照dashboard部分
