it is the begin

--- a/workspace/readme
+++ b/workspace/readme
@@ -12,7 +12,7 @@ https://github.com/akveo/blur-admin
 
 //开始到了content部分，参照dashboard部分
 
-//一行4
-//一行3
-//一行2
-//一行1
+//special layout/panel/modal can shall be added when needed
+//now panel task
+then
+modal/tab/table
