--- a/workspace/readme
+++ b/workspace/readme
@@ -21,3 +21,5 @@ modal/tab/table
 //need to deal with the display:none cause no animation question??
 
 //now changes shall be state changes,question1:create only one two create multi similar
+
+//js bind 部分需要仔细看一下onClick={Toast.createToast.bind(this,basicToastData,'')} in index.jsx
