it is the begin

--- a/workspace/readme
+++ b/workspace/readme
@@ -25,7 +25,11 @@ now tables
 
 tables 的各种样式以及td的左右以及链接，比如email,and also smart tables
 //继续table的数据融入,数据ok，继续其他样式的table
-//then forms
+//table 的列过滤设置
+//table 的自动同步数据设置
+//然后是table tableValues的data 后端获取，以及关联触发处理
+//
+//then forms 以及图表的处理
 
 
 //THEN forms and basic functions like mail,online talking and others,then cms/crm basic creation
