--- a/workspace/readme
+++ b/workspace/readme
@@ -28,7 +28,17 @@ tables 的各种样式以及td的左右以及链接，比如email,and also smart tables
 //table 的列过滤设置[DONE]
 [样例数据在webpack中的放置,CopyWebpackPlugin[done]]
 //table 的自动同步数据设置[now 就是前后台的数据处理的同步性，使用样例数据作为数据标本],------>
-//以及条件的触发,save cancel delete edit按钮的触发(need a confirmmodal 来处理delete的确认工作)
+//以及条件的触发,save cancel delete edit按钮的触发
+//过滤+分页
+server 排序，but each time get first 5 page records and save at client but give the total records number，（the biggest pagers）
+then when sort and filter update the data, delete ,when  the last page is 饱满的，do nothing, refresh base on the first total records number,and the total records number can be changed each refresh
+use this concept，server 排序
+return currentTbody and first 5 page data,when go to the 3 pages ,asychronized the next 6 7 page data, if exists, which shall be good to see and feel
+
+分页样式问题,分页过多时的持续增加，自适应页面时的处理
+filter部分和add部分共用一套代码，根据thead的type进行type的处理，最好可以和tbody edit部分的一起实现,utilFun 实现form元素的统一实现
+now add item,to the top line, then save, cancel button
+
 //然后是table tableValues的data 后端获取，以及关联触发处理
 //然后是reactjs的mvvm的处理模型
 //then forms 以及图表的处理
