--- a/workspace/readme
+++ b/workspace/readme
@@ -43,9 +43,11 @@ filter部分和add部分共用一套代码，根据thead的type进行type的处理，最好可以和tbody 
 now add item,to the top line, then save, cancel button --->add finished
 save finished
 
+table finished------------------->
+now  redux study,then
+try it,then forms and chart
 
 
-//然后是table tableValues的data 后端获取，以及关联触发处理
 //然后是reactjs的mvvm的处理模型
 //then forms 以及图表的处理
 
@@ -55,11 +57,8 @@ save finished
 //add a click event when the screen is small and the left banner is show,then hide the left banner,需要消息推送机制（message），notification采用流程触发机制，在线交流im的话考虑云信
 mail另行考虑，mail涉及的操作太多
 
-学习一下java的流程化规范，任务链以及机制，如果要规范，就要从开始定义完备
+学习一下java的流程化规范，任务链以及机制，如果要规范，就要从开始定义完备 state mechanism
 
-
-
-rowSize 不可以为未设
 
 
 
