it is the begin

--- a/workspace/readme
+++ b/workspace/readme
@@ -77,3 +77,4 @@ now chart, then form~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~!!!!!!
 
 now the dashBoard click shall all in one page,but how asychnorize the other link js when click and refresh the MainBlock in react??????
 use redux, something need to change dashboard things
+rebuild the dashboard basic
