it is the begin

--- a/workspace/readme
+++ b/workspace/readme
@@ -83,3 +83,4 @@ use https://github.com/yang-wei/rd3 as a choice,now the color need to be change,
 and also read the d3 doc
 https://github.com/d3/d3
 
+left dashoard 的数据获取以及整体处理
