--- a/workspace/readme
+++ b/workspace/readme
@@ -84,5 +84,5 @@ and also read the d3 doc
 https://github.com/d3/d3 c3
 
 still need the native choice
-first click close dashboard left when small view
 then the form,then draggable little panel,then the big modal,like oauth2 and work process,and sns,notifications basic business
+tomorow form and draggable little panel
