--- a/workspace/readme
+++ b/workspace/readme
@@ -93,4 +93,6 @@ https://github.com/akveo/blur-admin 样式参考
 
 left 部分根据history并设置相应的样式
 
-另外 form 没有实现首次加载
+now form 其他基本元素的样式以及处理，然后是form layout
+then draggable
+then map
