--- a/workspace/js/modules/common/form/readme
+++ b/workspace/js/modules/common/form/readme
@@ -6,5 +6,7 @@
 6.action仍然使用redux的action。使用props传递的方式
 
 
-现在是validate的设计部分，然后是服务端validate部分，然后是success的callback部分，然后是step form设计部分，然后做出index的demo部分，然后就是dragDrop和map
-need a basic element data-time
+现在是validate的设计部分，然后是服务端validate部分，然后是success的callback部分，然后是step form设计部分，然后做出index的demo部分，
+目前layout部分完成，需要基本元素的样式处理，然后是加入一个date-time的基本元素
+
+然后就是dragDrop和map
