--- a/workspace/readme
+++ b/workspace/readme
@@ -93,6 +93,11 @@ https://github.com/akveo/blur-admin 样式参考
 
 left 部分根据history并设置相应的样式
 
-now form 其他基本元素的样式以及处理(然后select，然后file，整个完事后考虑datetime)
+now form 其他基本元素的样式以及处理(然后select，然后file，还有一个textarea,整个完事后考虑datetime)
+file 只处理name，内容部分 form submit处理
+    //此处需要处理json和http formData 的区分，因为有file的处理，目前只考虑单file，也可以考虑多file部分，根据name，and id来结合处理，参照middleware/index.js
+   多文件的考虑，但是暂时不考虑多name的其他属性，因为可以试用radio和checkbox！！---------------------------------------
+   参照 http://stackoverflow.com/questions/35192841/fetch-post-with-multipart-form-data
+   以及http://blog.teamtreehouse.com/uploading-files-ajax
 then draggable
 then map
