it is the begin

--- a/workspace/readme
+++ b/workspace/readme
@@ -99,5 +99,6 @@ file 只处理name，内容部分 form submit处理
    多文件的考虑，但是暂时不考虑多name的其他属性，因为可以试用radio和checkbox！！---------------------------------------
    参照 http://stackoverflow.com/questions/35192841/fetch-post-with-multipart-form-data
    以及http://blog.teamtreehouse.com/uploading-files-ajax
+   file&&multi done, now textarea,then date-time
 then draggable
 then map
