--- a/workspace/js/modules/common/form/readme
+++ b/workspace/js/modules/common/form/readme
@@ -8,5 +8,8 @@
 
 现在是validate的设计部分，然后是服务端validate部分，然后是success的callback部分，然后是step form设计部分，然后做出index的demo部分，
 目前layout部分完成，需要基本元素的样式处理，然后是加入一个date-time的基本元素
+1.自适应的daterange
+2.data的格式化保存
+3.不同layoutform的不同daterange
 
 然后就是dragDrop和map
