it is the begin

--- a/workspace/js/modules/common/dragDrop/readme
+++ b/workspace/js/modules/common/dragDrop/readme
@@ -30,6 +30,9 @@ D3 drag
 
 基本框架搭建完成，目前是形状的绘制以及label的居中，然后考虑将图形和label整合为一个组，并保证其可以整体拖拽，然后，考虑工作区的整体结构和触发事件
 
+使用g 将同时拖拽文字和图形进行处理，另外拖拽end 失败的回退以及modal的显示
+拖拽成功的data处理，注意此处的data绑定以及data回传，刷新
+
 拖拽入口框
 拖拽回放
 垃圾回收框
