it is the begin

--- a/workspace/js/modules/common/dragDrop/readme
+++ b/workspace/js/modules/common/dragDrop/readme
@@ -44,4 +44,8 @@ D3 drag
 首先将基础性的技术性问题解决，然后进行业务性的判定处理
 sample group用于收集sample data，并根据行为进行处理，应该设计为一个对象，有行为，有属性，有值
 
-
+拖拽以及判定
+首先判断有无子元素，没有，弹出属性设定框，单独行为的话弹出不可设定，加入，弹出框的设计需要考虑
+因为涉及到修改，所以要判定data的初始值，然后向data加入，加入后，同步到storage，需要根据传入的id来设计，在右下侧底部要加入一个save的操作，用于和后台数据库同步
+，当触发完成后，需要设计流程action，并将其扩散到每个自行设计的类里面，这样就实现了数据和操作的分离，data改变后的重绘放置在componentDidUpdate里面
+首先是最基本的modal显示，添加修改操作的完成，然后再将其借入到data里面和action结合，一步一步来
