--- a/workspace/js/modules/common/dragDrop/readme
+++ b/workspace/js/modules/common/dragDrop/readme
@@ -49,3 +49,6 @@ sample group用于收集sample data，并根据行为进行处理，应该设计
 因为涉及到修改，所以要判定data的初始值，然后向data加入，加入后，同步到storage，需要根据传入的id来设计，在右下侧底部要加入一个save的操作，用于和后台数据库同步
 ，当触发完成后，需要设计流程action，并将其扩散到每个自行设计的类里面，这样就实现了数据和操作的分离，data改变后的重绘放置在componentDidUpdate里面
 首先是最基本的modal显示，添加修改操作的完成，然后再将其借入到data里面和action结合，一步一步来
+
+1.添加透明蒙版层
+2.去除动作
