--- a/workspace/js/modules/common/dragDrop/readme
+++ b/workspace/js/modules/common/dragDrop/readme
@@ -52,3 +52,13 @@ sample group用于收集sample data，并根据行为进行处理，应该设计
 
 1.添加透明蒙版层
 2.去除动作
+
+
+将整个流程串起来，同时将向内部传递的部分进行合适的处理，form需要一个单独change的触发action的回调，先将最基本的清空处理做一下
+
+这里不做工作流的记录的删除，我们放置在table或者list里面做
+
+在save的时候，判断是否已有flowId，没有的话，给出modal的name form 输入框，并用action，在callback的时候获取，并进行存储，如果已有flowId，直接保存
+这里仍然需要middleware部分的除去URL的endpoint之外的fun action的处理
+
+首先，目前架构走通，测试部分功能，比如清空工作板，然后拖拽的form部分走通，涉及到endpoint为function的情况，然后就是整天的保存处理，然后就是细节样式以及整个panel的title更新为工作流的name的处理
