--- a/workspace/js/modules/common/dragDrop/readme
+++ b/workspace/js/modules/common/dragDrop/readme
@@ -70,3 +70,5 @@ sample group用于收集sample data，并根据行为进行处理，应该设计
 action-->index.js部分，即将转移至basicElement-->commonElement.js的编码实现
     //注意此处的数据结构要和传输的data保持一致性，所以要在commonElement部分进行data结构的解析和完善，分为多种，注意toplevel的情况处理，
     // 是否尝试在modalheadr部分加入声明title？，比如您正在添加一个角色，您正在修改一个角色，您正在将角色添加在顶部等等！！！
+
+下午将验证完成，然后更新form，然后完成，然后单个元素的删除？？此处如何执行删除操作？，然后整体的save和删除
