it is the begin

--- a/workspace/readme
+++ b/workspace/readme
@@ -105,3 +105,5 @@ then map
 drag 部分需要考虑组织结构部分的实现，主要是塔状，顶层只允许一个，然后拖拽时，考虑position 可以拖拽至position，关联parent child时，考虑类似action的，一个下属只能有一个上级！！
 
 以后考虑需要将table checkbox中的,分割改为数组，另外需要将action等内置在common table组件中！！！！！！！！！！！！！！
+
+map 暂时不考虑，开始后端登陆，用户模块等的实现 以及rbac部分的实现，结合oauth2以及组织结构，然后加入工作流，然后是cms的实现，然后是oa的文件管理【采用svn版本形式前后端的结合处理】部分实现，然后库存，进货，销售，存储的处理，然後考虑简单商城的处理
